# stock-state

./: .gitignore  README.md  SPEC.md  pyproject.toml
prompts/: briefing_v1.md
src/stock_state/: __init__.py  cache.py  card.py  cli.py  config.py  cross_section.py  indicators.py  render.py  web.py
src/stock_state/families/: __init__.py  analyst.py  attribution.py  crowding.py  fundamentals.py  relative.py  valuation.py  volume_price.py
src/stock_state/judgement/: __init__.py  engine.py
src/stock_state/narrator/: __init__.py  brief.py  client.py  digest.py  validator.py
src/stock_state/providers/: base.py  ibkr_provider.py  yfinance_provider.py
src/stock_state/static/: app.js  index.html  styles.css
tests/: conftest.py  test_card.py  test_families.py  test_indicators.py  test_judgement.py  test_narrator.py  test_smoke_network.py  test_web.py
